[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["ysugimoto-ktn <ysugimot-ktn@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
